Lifting up states from button to board
Added a constructor to Board to store the state of the squares.

Addhed handleClick to let the square change its state while keeping the state on the board.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 package-lock.json
 tic_tac_toe/package-lock.json
 tic_tac_toe/package-lock.json
+tic_tac_toe/node_modules_/.cache/babel-loader/8538214d573ea7ce42a462b5fa7440e0.json
